remove junk in model code

--- a/Extensive VisionAI-EVA6/week7/Session7_Step2.ipynb
+++ b/Extensive VisionAI-EVA6/week7/Session7_Step2.ipynb
@@ -532,7 +532,7 @@
     "    def __init__(self):\n",
     "        super(Net5, self).__init__()\n",
     "        \n",
-    "        # # CONVOLUTION BLOCK 1 changed dilation to 1 in first layer\n",
+    "        # # CONVOLUTION BLOCK 1\n",
     "        self.convblock1 = nn.Sequential(\n",
     "            nn.Conv2d(in_channels=3, out_channels=16, kernel_size=(3, 3), padding='same', bias=False, dilation=1),\n",
     "            nn.ReLU(),\n",
@@ -546,7 +546,7 @@
     "            nn.ReLU(),\n",
     "            nn.BatchNorm2d(16),\n",
     "            nn.Dropout(dropout_value)\n",
-    "        ) # output_size = 26\n",
+    "        )\n",
     "\n",
     "        # CONVOLUTION BLOCK 2\n",
     "        self.convblock2 = nn.Sequential(\n",
@@ -558,7 +558,7 @@
     "            nn.ReLU(),\n",
     "            nn.BatchNorm2d(32),\n",
     "            nn.Dropout(dropout_value)\n",
-    "        ) # output_size = 24\n",
+    "        )\n",
     "\n",
     "        # CONVOLUTION BLOCK 3\n",
     "        self.convblock3 = nn.Sequential(\n",
@@ -570,40 +570,25 @@
     "            nn.ReLU(),\n",
     "            nn.BatchNorm2d(64),\n",
     "            nn.Dropout(dropout_value)\n",
-    "        ) # output_size = 9\n",
-    "        \n",
-    "        self.depthwise = nn.Sequential(\n",
-    "            nn.Conv2d(in_channels=128, out_channels=128, kernel_size=(3, 3), padding=1, groups=128, bias=False),\n",
-    "            nn.Conv2d(128,256,1),\n",
-    "            #nn.BatchNorm2d(256),nn.ReLU(),nn.Dropout(dropout_value)\n",
-    "        ) # Depthwise\n",
+    "        )\n",
     "        \n",
     "        # CONVOLUTION BLOCK 4\n",
     "        self.convblock4 = nn.Sequential(\n",
-    "            #nn.Conv2d(in_channels=64, out_channels=128, kernel_size=(3, 3), padding='same', bias=False, dilation = 1),\n",
-    "            #nn.ReLU(),\n",
-    "            #nn.BatchNorm2d(128),\n",
-    "            #nn.Dropout(dropout_value),\n",
     "            # Depthwise\n",
     "            nn.Conv2d(in_channels=64, out_channels=64, kernel_size=(3, 3), padding=1, groups=64, bias=False),\n",
     "            nn.Conv2d(64,128,1),\n",
-    "            #nn.BatchNorm2d(128),\n",
     "            nn.ReLU(),\n",
-    "            #nn.Dropout(dropout_value),\n",
+    "\n",
     "            #to remove last fc layer\n",
     "            nn.Conv2d(128,10,1),\n",
-    "            #nn.BatchNorm2d(10),\n",
     "            nn.ReLU()\n",
-    "        ) # output_size = 7\n",
+    "        )\n",
     "\n",
-    "        \n",
-    "        \n",
     "        # OUTPUT BLOCK\n",
     "        self.gap = nn.Sequential(\n",
     "            nn.AvgPool2d(kernel_size=4)\n",
-    "        ) # output_size = 1\n",
+    "        )\n",
     "\n",
-    "        #self.fc1 = nn.Linear(256, 10)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.convblock1(x)\n",
@@ -4753,7 +4738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72a134db",
+   "id": "b90e15ab",
    "metadata": {},
    "outputs": [],
    "source": []
