--- a/Extensive VisionAI-EVA6/week7/late_submission/Session7_late1.ipynb
+++ b/Extensive VisionAI-EVA6/week7/late_submission/Session7_late1.ipynb
@@ -105,12 +105,12 @@
     "     transforms.RandomAffine((-5,5), translate=(0.1,0.1), scale=(0.9,1.1), shear=None, resample=False, fill=(0.4919, 0.4827, 0.4472))\n",
     "    ])\n",
     "\n",
-    "trainset = torchvision.datasets.CIFAR10(root='./data', train=True,\n",
+    "trainset = torchvision.datasets.CIFAR10(root='./../data', train=True,\n",
     "                                        download=True, transform=transform)\n",
     "train_loader = torch.utils.data.DataLoader(trainset, batch_size=4,\n",
     "                                          shuffle=True, num_workers=2)\n",
     "\n",
-    "testset = torchvision.datasets.CIFAR10(root='./data', train=False,\n",
+    "testset = torchvision.datasets.CIFAR10(root='./../data', train=False,\n",
     "                                       download=True, transform=transform)\n",
     "test_loader = torch.utils.data.DataLoader(testset, batch_size=4,\n",
     "                                         shuffle=False, num_workers=2)\n",
@@ -4802,7 +4802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
