saved model to reload

--- a/Extensive VisionAI-EVA6/week7/late_submission/Session7_late3.ipynb
+++ b/Extensive VisionAI-EVA6/week7/late_submission/Session7_late3.ipynb
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cf585b70",
+   "id": "5723495d",
    "metadata": {},
    "outputs": [
     {
@@ -4652,7 +4652,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "49f3f372",
+   "id": "4ca9ec81",
    "metadata": {},
    "outputs": [
     {
@@ -4675,7 +4675,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a2d17c60",
+   "id": "e318b334",
    "metadata": {},
    "outputs": [
     {
@@ -4749,8 +4749,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "a9645a24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specify a path\n",
+    "PATH = \"Net2_120epoch_model.pt\"\n",
+    "\n",
+    "# Save\n",
+    "torch.save(model.state_dict(), PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
-   "id": "0ece204d",
+   "id": "ce17ea36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4763,7 +4777,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f0784d63",
+   "id": "85255449",
    "metadata": {},
    "outputs": [
     {
@@ -4797,7 +4811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c40c1d1b",
+   "id": "08c2c3c4",
    "metadata": {},
    "outputs": [],
    "source": []
