--- a/Extensive VisionAI-EVA6/11_YOLO/OpenCV_Yolo/run_main.ipynb
+++ b/Extensive VisionAI-EVA6/11_YOLO/OpenCV_Yolo/run_main.ipynb
@@ -2,7 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.5.3'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "id": "HxLVzATPMVl_"
    },
